...
                    </TouchableOpacity>
                </View>
            )}

            {/* Activities List */}
            <FlashList
                testID="activity-list"
                data={listActivities}
                keyExtractor={(item) => item.id}
                renderItem={renderActivityItem}
                style={{ flex: 1 }}
                refreshing={refreshing}
                onRefresh={onRefresh}
...
